# poneglyph

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: install.md
fixtures/: parity-structural.md
nix/: build.nix  dev-shell.nix  dev.nix  hm.nix
scripts/: structural-parity.py
src/: app.rs  config.rs  debug_emit.rs  image_view.rs  main.rs  markdown.rs  theme.rs  ui.rs
