[package]
name = "poneglyph"
version = "0.1.0"
edition = "2021"
description = "A tiny, beautiful terminal markdown editor"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/poneglyph"
keywords = ["markdown", "editor", "tui", "terminal"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
unicode-width = "0.2"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
ureq = "2"

[dev-dependencies]
insta = { version = "1.43", features = ["json"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
